--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.3.0",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~52.0.43",
     "expo-font": "~13.0.4",
@@ -18,8 +20,10 @@
     "react": "18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "0.76.9",
-    "styled-components": "^5.3.5",
-    "react-native-svg": "15.8.0"
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
